Initial commit. Maven is now installed, and version 21 of Java. WildFly works as intended. Also created a basic folder structure and started working on a Pet DTO.